--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -9,6 +9,8 @@
     <meta name="Author" content="Mike Helm">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/medium.css">
+    <link rel="stylesheet" href="styles/large.css">
     <link rel="icon" href="favicon.ico">
     <title>Laketown Chamber of Commerce</title>
 </head>
@@ -34,45 +36,49 @@
     </header>
     <main>
         <H1>Come see Laketown and the glory of the Humans land that survived the War of the Five Armies</H1>
-        <section id="laktownone">
-            <picture>
-                <img src="images/discover/axe.jpg" data-src="images/discover/mountains.jpg" width="300" height="400">
-            </picture>
-            <p>Come explore the Misty Mountains! Lost treasure hidden inside and watch out for Goblins</p>
-        </section>
-        <section id="laketowntwo">
-            <picture>
-                <img src="images/discover/axe.jpg" data-src="images/discover/lake_with_smaug.jpg" width="300" height="400">
-            </picture>
-            <p>The great Dragon Smaug was felled in this very lake! Guided tours to see the great beast are now available</p>
-        </section>
-        <section id="laketownthree">
-            <picture>
-                <img src="images/discover/axe.jpg" data-src="images/discover/lake_and_mountain.jpg" width="300" height="400">
-            </picture>
-            <p>If you don't want to see the dragon, no problem, theres lots to do around the lake and surrounding hills. Come take a look!</p>
-        </section>
-        <section id="laketownfour">
-            <picture>
-                <img src="images/discover/axe.jpg" data-src="images/discover/quakies.jpg" width="300" height="400">
-            </picture>
-            <p>The hills are alive in Laketown. Come listen as the trees themselves quiver as the wind blows</p>
-        </section>
-        <section id="laketownfive">
-            <picture>
-                <img src="images/discover/axe.jpg" data-src="images/discover/wildlife.jpg" width="300" height="400">
-            </picture>
-            <p>You can see many types of wildlife in town and in surrounding areas. Careful, you never know when one might be watching you</p>
-        </section>
-        <section id="laketownsix">
-            <picture>
-                <img  src="images/discover/axe.jpg" data-src="images/discover/mining.jpg" width="300" height="400">
-            </picture>
-            <p>For the really antisocial ones, go be a miner and work in them hills</p>
+        <section id="discover">
+            <div class="discoverit" id="mountains">
+                <picture>
+                    <img src="images/discover/axe.jpg" data-src="images/discover/mountains.jpg" width="300" height="400">
+                </picture>
+                <p>Come explore the Misty Mountains! Lost treasure hidden inside and watch out for Goblins</p>
+            </div>
+            <div class="discoverit" id="lake">
+                <picture>
+                    <img src="images/discover/axe.jpg" data-src="images/discover/lake_with_smaug.jpg" width="300" height="400">
+                </picture>
+                <p>The great Dragon Smaug was felled in this very lake! Guided tours to see the great beast are now available</p>
+            </div>
+            <div class="discoverit" id="combo">
+                <picture>
+                    <img src="images/discover/axe.jpg" data-src="images/discover/lake_and_mountain.jpg" width="300" height="400">
+                </picture>
+                <p>If you don't want to see the dragon, no problem, theres lots to do around the lake and surrounding hills. Come take a look!</p>
+            </div>
+            <div class="discoverit" id="trees">
+                <picture>
+                    <img src="images/discover/axe.jpg" data-src="images/discover/quakies.jpg" width="300" height="400">
+                </picture>
+                <p>The hills are alive in Laketown. Come listen as the trees themselves quiver as the wind blows</p>
+            </div>
+            <div class="discoverit" id="animals">
+                <picture>
+                    <img src="images/discover/axe.jpg" data-src="images/discover/wildlife.jpg" width="300" height="400">
+                </picture>
+                <p>You can see many types of wildlife in town and in surrounding areas. Careful, you never know when one might be watching you</p>
+            </div>
+            <div class="discoverit" id="mine">
+                <picture>
+                    <img  src="images/discover/axe.jpg" data-src="images/discover/mining.jpg" width="300" height="400">
+                </picture>
+                <p>For the really antisocial ones, go be a miner and work in them hills</p>
+            </div>
         </section>
     </main>
     <footer>
-        <img src="images/logo.svg.svg" width="50" height="50" alt="Laketown chamber of commerce logo"><a href="https://goo.gl/maps/JtLYFcWp3DSvZvSp9" target="_blank"><p>Location:2 Laketown Way, Laketown, Rhovanion, Middle Earth </p></a><p>&copy;<span id="theCurrentYear"></span> Mike Helm Pocatello, ID &LT;(^.^)> Last Modified <span id="date"></span></p>
+        <p><span class="label">Number of Visits: </span><span id="visits"></span></p>
+        <br><p><span class="label"> Last time you visited: </span><span id="daysBetween"></span></p>
+        <hr><img src="images/logo.svg.svg" width="50" height="50" alt="Laketown chamber of commerce logo"><a href="https://goo.gl/maps/JtLYFcWp3DSvZvSp9" target="_blank"><p>Location:2 Laketown Way, Laketown, Rhovanion, Middle Earth </p></a><p>&copy;<span id="theCurrentYear"></span> Mike Helm Pocatello, ID &LT;(^.^)> <br>Last Modified <span id="date"></span></p>
     </footer>
 <script src="scripts/apps.js"></script>
 <script src="scripts/hamburger.js"></script>
