--- a/chamber/index.html
+++ b/chamber/index.html
@@ -65,15 +65,21 @@
             <div class="spotlights">
                 <div>
                     <div class="spotlight1">Find 'em All</div>
-                    Need a tracker? WE GOT 'EM! Come find us at 15 Laketown Way and we will get you going to find whatever you are looking for! Need to find your dog? A goblin who took your jewelery? Your estranged mother-in-law? No matter the issue we will find em!
+                        <img src="images/magglass.jpg" id="magglass" alt="Find Em All" width="50" height="100">
+                        <p>15 Laketown Way</p>
+                        <p>294.129.4242</p>
                 </div>
                 <div>
                     <div class="spotlight2">Miners Wanted</div>
-                    The Miners guild has struck it rich and we need more people to come help! Put in your application at town hall or speak with Bard and he will get you started
+                        <img src="images/pickaxe.jpg" id="pickaxe" alt="Mining" width="50" height="100">
+                        <p>2 Laketown Way</p>
+                        <p>294.129.4243</p>
                 </div>  
                 <div>
                     <div class="spotlight3">Agricouture</div>
-                    Need some fashionable clothes to farm in? We are looking for someone willing to mend and sew new clothes for our farmers in need.
+                        <img src="images/needle.jpg" id="needle" alt="Agricouture" width="50" height="100">
+                        <p>16 Laketown Way</p>
+                        <p>294.129.4244</p>
                 </div>
             </div>
         </div>
