--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -15,31 +15,31 @@
         <h1>Images below, thanks</h1>
     </header>
     <main>
-        <section id="dogone">
+        <div class="dogone">
             <picture>
             <img src= "images/boneone.jpg" data-src="images/dog-one.jpg" id="dogone" alt="dogone" width="300" height="400">
             </picture>
-        </section>
-        <section id="dogtwo">
+        </div>
+        <div class="dogtwo">
             <picture>
                 <img src="images/boneone.jpg" data-src="images/dog-two.jpg" id="dogtwo" alt= "dogtwo"width="300" height="400">
             </picture>
-        </section>
-        <section id="dogthree">
+        </div>
+        <div class="dogthree">
             <picture>
                 <img src="images/boneone.jpg" data-src="images/dog-three.jpg" id="dogthree" alt="dogthree" width="300" height="400">
             </picture>
-        </section>
-        <section id="dogfour">
+        </div>
+        <div class="dogfour">
             <picture>
                 <img src="images/boneone.jpg" data-src="images/dog-four.jpg" id="dogfour" alt="dogfour" width="300" height="400">
             </picture>
-        </section>
-        <section id="dogfive">
+        </div>
+        <div class="dogfive">
             <picture>
                 <img src="images/boneone.jpg" data-src="images/dog-five.jpg" id="dogfive" alt="dogfive" width="300" height="400">
             </picture>
-        </section>
+        </div>
     </main>
     <footer>
         Mike Helm
