adjusted index and css thanks to nimrod

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -38,7 +38,7 @@
     <main>
         <div id="herooo">
             <div class="herodiv">
-                <picture>
+                <picture class="heroimg">
                     <source srcset="images/wdd230-org-med.jpg" media="(min-width: 800px)">
                     <source srcset="images/wdd230-org-large.jpg" media="(min-width: 1024px)"> 
                     <img src="images/wdd230-org-small.jpg" alt="hero image for laketown chamber of commerce">
@@ -64,22 +64,28 @@
         <div id="spotlights-div">
             <div class="spotlights">
                 <div>
-                    <div class="spotlight1">Find 'em All</div>
+                    <div class="spotlight1">
+                        <h4>Find 'em All</h4>
                         <img src="images/magglass.jpg" id="magglass" alt="Find Em All" width="50" height="100">
                         <p>15 Laketown Way</p>
                         <p>294.129.4242</p>
+                    </div>
                 </div>
                 <div>
-                    <div class="spotlight2">Miners Wanted</div>
+                    <div class="spotlight2">
+                        <h4>Miners Wanted</h4>
                         <img src="images/pickaxe.jpg" id="pickaxe" alt="Mining" width="50" height="100">
                         <p>2 Laketown Way</p>
                         <p>294.129.4243</p>
+                    </div>
                 </div>  
                 <div>
-                    <div class="spotlight3">Agricouture</div>
+                    <div class="spotlight3">
+                        <h4>Agricouture</h4>
                         <img src="images/needle.jpg" id="needle" alt="Agricouture" width="50" height="100">
                         <p>16 Laketown Way</p>
                         <p>294.129.4244</p>
+                    </div>
                 </div>
             </div>
         </div>
