Co-authored-by: Ryan Singleton <ryansingleton-3@users.noreply.github.com> Co-authored-by: crewsbd <crewsbd@users.noreply.github.com>

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -39,9 +39,9 @@
         <div id="herooo">
             <div class="herodiv">
                 <picture class="heroimg">
-                    <source srcset="images/wdd230-org-med.jpg" media="(min-width: 800px)">
-                    <source srcset="images/wdd230-org-large.jpg" media="(min-width: 1024px)"> 
-                    <img src="images/wdd230-org-small.jpg" alt="hero image for laketown chamber of commerce">
+                    <source srcset="images/hero.jpg" media="(min-width: 800px)">
+                    <source srcset="images/hero.jpg" media="(min-width: 1024px)"> 
+                    <img src="images/hero.jpg" alt="hero image for laketown chamber of commerce">
                 </picture>
             </div>
         </div>
@@ -90,7 +90,7 @@
             </div>
         </div>
         <div id="wantin">
-            <div class="join">Interested? Join here</div>
+            <div class="join"><button>Interested? Join here</button></div>
         </div>
     </main>
     <footer>
