added hover to discover

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -12,16 +12,16 @@
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/large.css">
     <link rel="icon" href="favicon.ico">
-    <title>Laketown Chamber of Commerce</title>
+    <title>Laketown Chamber of Commerce Discover Page</title>
 </head>
 <body> 
     <header>
-        <p><div id="day"></div>
+        <p><div id="day"></div></p>
         <div id="banner">
             <img id="logo" src="images/logo.svg.svg" width=100 height=100 alt="The logo for the Laketown, Middle-Earth Chamber of Commerce">
             <h1> Laketown Chamber of Commerce</h1>
             <div id="current-date">date</div>
-        </div></p>
+        </div>
         <nav>
             <button id='hamburgerBtn'><span>&#9776;</span><span>X</span></button>
             <ul id='primaryNav'>
@@ -39,37 +39,37 @@
         <section id="discover">
             <div class="discoverit" id="mountains">
                 <picture>
-                    <img src="images/discover/axe.jpg" data-src="images/discover/mountains.jpg" width="300" height="400">
+                    <img src="images/discover/axe.jpg" data-src="images/discover/mountains.jpg" alt="those hills" width="300" height="400">
                 </picture>
                 <p>Come explore the Misty Mountains! Lost treasure hidden inside and watch out for Goblins</p>
             </div>
             <div class="discoverit" id="lake">
                 <picture>
-                    <img src="images/discover/axe.jpg" data-src="images/discover/lake_with_smaug.jpg" width="300" height="400">
+                    <img src="images/discover/axe.jpg" data-src="images/discover/lake_with_smaug.jpg" alt="dragon" width="300" height="400">
                 </picture>
                 <p>The great Dragon Smaug was felled in this very lake! Guided tours to see the great beast are now available</p>
             </div>
             <div class="discoverit" id="combo">
                 <picture>
-                    <img src="images/discover/axe.jpg" data-src="images/discover/lake_and_mountain.jpg" width="300" height="400">
+                    <img src="images/discover/axe.jpg" data-src="images/discover/lake_and_mountain.jpg" alt="lake" width="300" height="400">
                 </picture>
                 <p>If you don't want to see the dragon, no problem, theres lots to do around the lake and surrounding hills. Come take a look!</p>
             </div>
             <div class="discoverit" id="trees">
                 <picture>
-                    <img src="images/discover/axe.jpg" data-src="images/discover/quakies.jpg" width="300" height="400">
+                    <img src="images/discover/axe.jpg" data-src="images/discover/quakies.jpg" alt="trees" width="300" height="400">
                 </picture>
                 <p>The hills are alive in Laketown. Come listen as the trees themselves quiver as the wind blows</p>
             </div>
             <div class="discoverit" id="animals">
                 <picture>
-                    <img src="images/discover/axe.jpg" data-src="images/discover/wildlife.jpg" width="300" height="400">
+                    <img src="images/discover/axe.jpg" data-src="images/discover/wildlife.jpg" alt="wildlife" width="300" height="400">
                 </picture>
                 <p>You can see many types of wildlife in town and in surrounding areas. Careful, you never know when one might be watching you</p>
             </div>
             <div class="discoverit" id="mine">
                 <picture>
-                    <img  src="images/discover/axe.jpg" data-src="images/discover/mining.jpg" width="300" height="400">
+                    <img  src="images/discover/axe.jpg" data-src="images/discover/mining.jpg" alt="delving" width="300" height="400">
                 </picture>
                 <p>For the really antisocial ones, go be a miner and work in them hills</p>
             </div>
