adjusted main index

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li>Week 5: <a href="chamber/index.html">Chamber</a>,&nbsp;<a href="lesson5/bom.html">BoM Activity</a></li>
             <li>Week 6: <a href="lessonsix.html">To be delivered soon</a></li>
             <li>Week 7: <a href="lesson7/lazyload.html">Lazy Load here</a></li>
-            <li>Week 8: <a href="lesson8/tablebuild.html">┳━┳</a></li>
+            <li>Week 8: <a href="lesson8/tablebuild.html">┳━┳</a> <a href="Form-start/index.html">Form practice Build</a> </li>
             <li>Week 9: <a href="lessonnine.html">To be delivered soon</a></li>
             <li>Week 10: <a href="lessonten.html">To be delivered soon</a></li>
             <li>Week 11: <a href="lessoneleven.html">To be delivered soon</a></li>
