started join page

--- a/Form-start/index.html
+++ b/Form-start/index.html
@@ -75,7 +75,7 @@
             <label class="top">Anticipated Completion Date <input type="date" name="completedDate"></label>
             <label class="top">Course Subject
                 <select name="subject">
-                    <option value="">Please Select fool</option>
+                    <option value="">Please Select fool &#9662;</option>
                     <option value="testHere">Testing for this</option>
                     <option value="testHere">Testing for this</option>
                     <option value="testHere">Testing for this</option>
@@ -88,9 +88,6 @@
             <label class="top">How Many Authors <input type="number" name="authors"></label>
         </fieldset>
         <input type="submit" value="Announce My Course" class="submitBtn">
-
-
-
         </form>        
 
           
