fixed textarea columns

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -55,7 +55,7 @@
             </fieldset>
             <fieldset>
                 <legend>About the Business</legend>
-                <label class="top">Tell us about your business citizen<textarea rows="3" cols="10" name="business" placeholder="Enter details about your business here, Citizen:"></textarea></label>
+                <label class="top">Tell us about your business citizen<textarea rows="15" cols="150" name="business" placeholder="Please tell us about your business here, Citizen:"></textarea></label>
             </fieldset>
             <input type="submit" value="Announce My Decision to Join" class="submitBtn">
 
