--- a/chamber/join.html
+++ b/chamber/join.html
@@ -40,7 +40,7 @@
                 <legend>Applicant Information</legend>
                 <label class="top">First Name*: <input type="text" required></label>
                 <label class="top">Last Name*: <input type="text" required></label>
-                <label class="top">Business Title: <input type="text"></label>
+                <label class="top">Business Title: <input type="text" pattern="[A-Za-z19]{7}"></label>
                 <label class="top">Email*: <input type="email" placeholder="test@test.com" required></label>
                 <label class="top">Cellphone Number*: <input type="tel" placeholder="1231231234" required></label>
                 <label class="top">Business Name/Title*: <input type="text" required></label>
