--- a/chamber/index.html
+++ b/chamber/index.html
@@ -29,7 +29,7 @@
                 <li><a href="index.html">Home</a> </li>
                 <li><a href="discover.html">Discover</a></li>
                 <li><a href="join.html">Unite</a></li>
-                <li><a href="#">Link3</a></li>
+                <li><a href="directory.html">Directory</a></li>
                 <li><a href="https://www.linkedin.com"><img src="images/linkedin_logo.svg" width="20" height="20" alt="linkedin Link"></a></li>
                 <li><a href="https://www.facebook.com"><img src="images/facebook_logo.svg" width="20" height="20" alt="facebook Link"></a></li>
             </ul>
