--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -22,6 +22,17 @@
             <h1> Laketown Chamber of Commerce</h1>
             <div id="current-date">date</div>
         </div>
+        <nav>
+            <button id='hamburgerBtn'><span>&#9776;</span><span>X</span></button>
+            <ul id='primaryNav'>
+                <li><a href="index.html">Home</a> </li>
+                <li><a href="discover.html">Discover</a></li>
+                <li><a href="join.html">Unite</a></li>
+                <li><a href="directory.html">Directory</a></li>
+                <li><a href="https://www.linkedin.com"><img src="images/linkedin_logo.svg" width="20" height="20" alt="linkedin Link"></a></li>
+                <li><a href="https://www.facebook.com"><img src="images/facebook_logo.svg" width="20" height="20" alt="facebook Link"></a></li>
+            </ul>
+        </nav>
     <main>
         <div class="cards"></div>
     </main>
