--- a/chamber/index.html
+++ b/chamber/index.html
@@ -90,7 +90,7 @@
             </div>
         </div>
         <div id="wantin">
-            <div class="join"><button>Interested? Join here</button></div>
+            <div class="join"><button><a href="https://freankine212.github.io/wdd230/chamber/join.html" class="button" target="_blank">Interested? Join here</a></button></div>
         </div>
     </main>
     <footer>
