fixed discover html

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -16,7 +16,7 @@
 </head>
 <body> 
     <header>
-        <p><div id="day"></div></p>
+        <div id="day"></div>
         <div id="banner">
             <img id="logo" src="images/logo.svg.svg" width=100 height=100 alt="The logo for the Laketown, Middle-Earth Chamber of Commerce">
             <h1> Laketown Chamber of Commerce</h1>
@@ -35,7 +35,7 @@
         </nav>
     </header>
     <main>
-        <H1>Come see Laketown and the glory of the Humans land that survived the War of the Five Armies</H1>
+        <h2>Come see Laketown and the glory of the Humans land that survived the War of the Five Armies</h2>
         <section id="discover">
             <div class="discoverit" id="mountains">
                 <picture>
