--- a/chamber/thanks.html
+++ b/chamber/thanks.html
@@ -15,7 +15,7 @@
     <header>
         <div id="day"></div>
         <div id="banner">
-            <img id="logo" src="images/logo.svg.svg" width=100 height=100 alt="The logo for the Laketown, Middle-Earth Chamber of Commerce">
+            <img id="logo" src="images/logo.svg.webp" width=100 height=100 alt="The logo for the Laketown, Middle-Earth Chamber of Commerce">
             <h1> Laketown Chamber of Commerce Unite Page</h1>
             <div id="current-date">date</div>
         </div>
