changes to join

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -59,46 +59,52 @@
             </fieldset>
             <input type="submit" value="Announce My Decision to Join" class="submitBtn">
         </form>
-        <table>
-            <caption>
-                Chart of membership tiers
-            </caption>
-            <thead>
-                <th> </th>
-                <th>NP Membership</th>
-                <th>Bronze Membership</th>
-                <th>Silver Membership</th>
-                <th>Gold Membership</th>
-            </thead>
-            <tbody>
-                <td>Monthly Fee</td>
-                <td>Free</td>
-                <td>5 g/p</td>
-                <td>15 g/p</td>
-                <td>30 g/p</td>
-            </tbody>
-            <tbody>
-                <td>Training</td>
-                <td>One training per month</td>
-                <td>Three trainings per month</td>
-                <td>Five trainings per month</td>
-                <td>Unlimited access to trainings</td>
-            </tbody>
-            <tbody>
-                <td>Town Hall wall space advertising</td>
-                <td>2 spaces</td>
-                <td>5 spaces</td>
-                <td>8 spaces</td>
-                <td>10 spaces</td>
-            </tbody>
-            <tbody>
-                <td>town hall meeting participation</td>
-                <td>1</td>
-                <td>2</td>
-                <td>4</td>
-                <td>5</td>
-            </tbody>
-        </table>
+        <div style="overflow-x:auto;">
+            <table>
+                <caption>
+                    Chart of membership tiers
+                </caption>
+                <thead>
+                    <tr>
+                        <th> </th>
+                        <th>NP Membership</th>
+                        <th>Bronze Membership</th>
+                        <th>Silver Membership</th>
+                        <th>Gold Membership</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Monthly Fee</td>
+                        <td>Free</td>
+                        <td>5 g/p</td>
+                        <td>15 g/p</td>
+                        <td>30 g/p</td>
+                    </tr>
+                    <tr>
+                        <td>Training</td>
+                        <td>One training per month</td>
+                        <td>Three trainings per month</td>
+                        <td>Five trainings per month</td>
+                        <td>Unlimited access to trainings</td>
+                    </tr>
+                    <tr>
+                        <td>Town Hall wall space advertising</td>
+                        <td>2 spaces</td>
+                        <td>5 spaces</td>
+                        <td>8 spaces</td>
+                        <td>10 spaces</td>
+                    </tr>
+                    <tr>
+                        <td>town hall meeting participation</td>
+                        <td>1</td>
+                        <td>2</td>
+                        <td>4</td>
+                        <td>5</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </main>
     <footer>
         <img src="images/logo.svg.svg" width="50" height="50" alt="Laketown chamber of commerce logo"><a href="https://goo.gl/maps/JtLYFcWp3DSvZvSp9" target="_blank"><p>Location:2 Laketown Way, Laketown, Rhovanion, Middle Earth </p></a><p>&copy;<span id="theCurrentYear"></span> Mike Helm Pocatello, ID &LT;(^.^)> Last Modified <span id="date"></span></p>
