--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li>Week 7: <a href="lesson7/lazyload.html">Lazy Load here</a></li>
             <li>Week 8: <a href="lesson8/tablebuild.html">┳━┳</a> <a href="Form-start/index.html">Form practice Build</a> </li>
             <li>Week 9: <a href="lesson9/prophets.html">Prophets,</a> <a href="chamber/directory.json" >JSON for week 9</a></li>
-            <li>Week 10: <a href="lessonten.html">To be delivered soon</a></li>
+            <li>Week 10: <a href="lesson10/weather-api.html">Weather api test</a></li>
             <li>Week 11: <a href="lessoneleven.html">To be delivered soon</a></li>
         </ul>
 </main>
