--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -34,7 +34,19 @@
             </ul>
         </nav>
     <main>
-        <div class="cards"></div>
+        <section id="directory">
+            <div class="menu">
+                <button id="grid">📅Grid</button>
+                <button id="list">🗒️List</button>
+            </div>
+            <article class="grid">
+                <h2>Our Members</h2>
+            
+                <div class="cards"></div>
+            
+            </article>
+            <div id="space"></div>
+        </section>
     </main>
     <footer>
         <img src="images/logo.svg.svg" width="50" height="50" alt="Laketown chamber of commerce logo"><a href="https://goo.gl/maps/JtLYFcWp3DSvZvSp9" target="_blank"><p>Location:2 Laketown Way, Laketown, Rhovanion, Middle Earth </p></a><p>&copy;<span id="theCurrentYear"></span> Mike Helm Pocatello, ID &LT;(^.^)> Last Modified <span id="date"></span></p>
