--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -33,6 +33,7 @@
                 <li><a href="https://www.facebook.com"><img src="images/facebook_logo.svg" width="20" height="20" alt="facebook Link"></a></li>
             </ul>
         </nav>
+    </header>
     <main>
         <section id="directory">
             <div class="menu">
@@ -41,9 +42,9 @@
             </div>
             <article class="grid">
                 <h2>Our Members</h2>
-            
+
                 <div class="cards"></div>
-            
+
             </article>
             <div id="space"></div>
         </section>
