added number visits to fix console errors

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -107,10 +107,11 @@
         </div>
     </main>
     <footer>
+        <p><span class="label">Number of Visits: </span><span id="visits"></span></p>
+        <br><p><span class="label"> Last time you visited: </span><span id="daysBetween"></span></p>
         <img src="images/logo.svg.svg" width="50" height="50" alt="Laketown chamber of commerce logo"><a href="https://goo.gl/maps/JtLYFcWp3DSvZvSp9" target="_blank"><p>Location:2 Laketown Way, Laketown, Rhovanion, Middle Earth </p></a><p>&copy;<span id="theCurrentYear"></span> Mike Helm Pocatello, ID &LT;(^.^)> Last Modified <span id="date"></span></p>
     </footer>
 <script src="scripts/apps.js"></script>
 <script src="scripts/hamburger.js"></script>
-<script src="scripts/windchill.js"></script>
 </body>
 </html>
