--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -50,6 +50,8 @@
         </section>
     </main>
     <footer>
+        <p><span class="label">Number of Visits: </span><span id="visits"></span></p>
+        <br><p><span class="label"> Last time you visited: </span><span id="daysBetween"></span></p>
         <img src="images/logo.svg.svg" width="50" height="50" alt="Laketown chamber of commerce logo"><a href="https://goo.gl/maps/JtLYFcWp3DSvZvSp9" target="_blank"><p>Location:2 Laketown Way, Laketown, Rhovanion, Middle Earth </p></a><p>&copy;<span id="theCurrentYear"></span> Mike Helm Pocatello, ID &LT;(^.^)> Last Modified <span id="date"></span></p>
     </footer>
 <script src="scripts/apps.js"></script>
