working on final

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <li>Week 9: <a href="lesson9/prophets.html">Prophets,</a> <a href="chamber/directory.json" >JSON for week 9</a> <a href="chamber/directory-wireframes.html">🎞</a></li>
             <li>Week 10: <a href="lesson10/weather-api.html">Weather api test</a></li>
             <li>Week 11: <a href="lessoneleven.html">To be delivered soon</a></li>
+            <li>Week 12: <a href="final/designing/design.html">📝</a> </li>
         </ul>
 </main>
     <footer>
