--- a/final/designing/design.html
+++ b/final/designing/design.html
@@ -15,6 +15,10 @@
         </nav>
     </header>
     <main>
+        <h2>Site Map</h2>
+        <p>
+            <img src="images/sitemap.jpg" alt="sitemap">
+        </p>
         <h2>Site Purpose</h2>
         <p>
             The focus of this page will be to allow visitors to build their own drinks as well as be able to pick it up from the main store! What a great option for people who don't know what they like!
