--- a/final/bountifulfresh.html
+++ b/final/bountifulfresh.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <header>
+        <img src="images/logo2.webp" alt="logo for bountiful foods">
         <ul id='primaryNav'>
             <li><a href="bountifulhome.html">Home</a> </li>
             <li><a href="bountifulfresh.html">Freshness Abounding</a></li>
