form added to home

--- a/final/bountifulhome.html
+++ b/final/bountifulhome.html
@@ -48,6 +48,15 @@
             <div id="qanda">
                 <h2>Got</h2>
                 <div class="quest">Questions?</div>
+                <form method="get" action="abount.html">
+                    <fieldset>
+                        <label class="top">Name: <input type="text"> </label>
+                        <label class="top">Phone: <input type="tel"></label>
+                        <label class="top"><textarea rows="5" cols="15" placeholder="Whatcha lookin for?"></textarea></label>
+                        <input type="submit" value="Send it" class="submitBtn">
+                    </fieldset>
+
+                </form>
             </div>
             <div id="weather-div">
                 <h2>Brrr</h2>
