--- a/final/bountifulhome.html
+++ b/final/bountifulhome.html
@@ -43,13 +43,13 @@
             
             <div id="calltoaction">
                 <h2>Hey man!</h2>
-                <div class="call"><a href="https://freankine212.github.io/wdd230/final/bountifulfresh.html" target="_blank" >Want to become Sir Mix-a-Lot? How? Click here!</a></div>
+                <div class="call"><a href="https://freankine212.github.io/wdd230/final/bountifulfresh.html" target="_blank" >Want to become Sir Mix-a-Lot?<br> How? Click here!</a></div>
             </div>
             <div id="qanda">
-                <h2>Got</h2>
-                <div class="quest">Questions?</div>
                 <form method="get" action="abount.html">
                     <fieldset>
+                        <h2>Got</h2>
+                        <div class="quest">Questions?</div>
                         <label class="top">Name: <input type="text"> </label>
                         <label class="top">Phone: <input type="tel"></label>
                         <label class="top"><textarea rows="5" cols="15" placeholder="Whatcha lookin for?"></textarea></label>
@@ -61,12 +61,13 @@
             <div id="weather-div">
                 <h2>Brrr</h2>
                 <div class="weatherdiv">Hows the weather today Bob?</div>
-                <p>Its a balmy <span id="current-temp"></span>&deg;F kiddos</p>
+                <p>Its a balmy <span id="current-temp"></span>&deg;F kiddos with <span id="humidity"> humidity</span></p>
                 <h4></h4>
                 <figure>
                     <img src="" alt="" id="weather-icon"/>
                     <figcaption></figcaption>
                 </figure>
+
             </div>
             <div class="drinksmade">
                 <h2>Drink master</h2>
@@ -80,5 +81,6 @@
     <script src="scripts/apps.js" ></script>
     <script src="scripts/hamburger.js"></script>
     <script src="scripts/weatherapi.js"></script>
+
 </body>
 </html>
