adding json to work on fresh page

--- a/final/bountifulfresh.html
+++ b/final/bountifulfresh.html
@@ -23,7 +23,30 @@
     </nav>
     </header>
     <main>
-
+        <h2>Here's how you become your very own Sir-Mix-Alot</h2>
+        <form method="get" action="alert">
+            <fieldset>
+                <legend>Drink Maker</legend>
+                <label class="top">First Name*: <input type="text" required></label>
+                <label class="top">Email*: <input type="email" required></label>
+                <label class="top">Phone Number*: <input type="tel" required></label>
+            </fieldset>
+            <fieldset>
+                <h2>Select your fillings</h2>
+                <legend>Stuffers</legend>
+                <label class = "top"> What Fruit you want?
+                    <select name="fruits">
+                        <option value="test">yes</option>
+                    </select>
+                    <select name="fruits">
+                        <option value=""></option>
+                    </select>
+                    <select name="fruits">
+                        <option value=""></option>
+                    </select>
+                </label>
+            </fieldset>
+        </form>
     </main>
     <footer>
 
