--- a/final/bountifulhome.html
+++ b/final/bountifulhome.html
@@ -61,7 +61,7 @@
             <div id="weather-div">
                 <h2>Brrr</h2>
                 <div class="weatherdiv">Hows the weather today Bob?</div>
-                <p>Its a balmy <span id="current-temp"></span>&deg;F kiddos with <span id="humidity"> humidity</span></p>
+                <p>Its a balmy <span id="current-temp"></span>&deg;F kiddos with</p><p> a high humidity percent of<span id="humidity"></span></p>
                 <h4></h4>
                 <figure>
                     <img src="" alt="" id="weather-icon"/>
